--- a/package.json
+++ b/package.json
@@ -1,42 +1,1 @@
-{
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@pathofdev/react-tag-input": "^1.0.7",
-    "axios": "^1.7.9",
-    "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1",
-    "react-tag-input": "^6.10.3",
-    "web-vitals": "^4.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
-}
+{"homepage":"https://github.com/Mohtawfik/Story-Weaver-FrontEnd","name":"frontend","version":"0.1.0","private":true,"dependencies":{"@pathofdev/react-tag-input":"^1.0.7","axios":"^1.7.9","cra-template":"1.2.0","react":"^19.0.0","react-dnd":"^16.0.1","react-dnd-html5-backend":"^16.0.1","react-dom":"^19.0.0","react-router-dom":"^7.1.3","react-scripts":"5.0.1","web-vitals":"^4.2.4"},"scripts":{"start":"react-scripts start","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject","predeploy":"npm run build","deploy":"gh-pages -d build"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]},"devDependencies":{"gh-pages":"^6.3.0"}}
